fixed alignment error of input boxes using border-box, changed grid values for features, added space-between in rating

--- a/styles/form.css
+++ b/styles/form.css
@@ -52,15 +52,16 @@ select, input[type="date"], input[type="text"], textarea {
     border-radius: 5px;
     font-size: 1em;
     background-color: white;
+    box-sizing: border-box;
     
     
 }
 
 .rating {
     display: flex;
-    flex-direction: row;
-    gap: 7rem;
-    margin-top: 0.5rem;
+    justify-content: space-between; 
+    align-items: center;
+    gap: 1rem;
 }
 
 .rating label {
@@ -76,7 +77,7 @@ select, input[type="date"], input[type="text"], textarea {
 
 .features {
     display: grid;
-    
+    grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
     gap: 1rem;
 }
 
